--- a/page2.html
+++ b/page2.html
@@ -13,13 +13,13 @@
           <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="page2.html">Features</a>
+          <a class="nav-link" href="page2.html">Music</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="page3.html">Videos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
+          <a class="nav-link" href = "page4.html">Shows</a>
         </li>
       </ul>
     </div>
