--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </nav>
   </head>
 <body>
-<h1>Title</h1>
+<h1>Welcome to Russell's Website! 🥳 </h1>
   <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingOne">
