--- a/index.html
+++ b/index.html
@@ -21,13 +21,16 @@
         <li class="nav-item">
           <a class="nav-link" href = "page4.html">Shows</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href = "page5.html">Movies</a>
+        </li>
       </ul>
     </div>
   </div>
 </nav>
   </head>
 <body>
-<h1>Welcome to Russell's Website! 🥳 </h1>
+<h1>Welcome to Russell's Website! </h1>
   <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingOne">
