--- a/page4.html
+++ b/page4.html
@@ -21,6 +21,9 @@
         <li class="nav-item">
           <a class="nav-link" href = "page4.html">Shows</a>
         </li>
+       <li class="nav-item">
+          <a class="nav-link" href = "page5.html">Movies</a>
+        </li>
       </ul>
     </div>
   </div>
