--- a/page4.html
+++ b/page4.html
@@ -20,7 +20,7 @@
         </li>
         <div class="dropdown">
   <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-    Shows button
+    Shows 
   </button>
   <ul class="dropdown-menu">
     <li><a class="dropdown-item" href="#">Action</a></li>
