--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <ul class="dropdown-menu">
     <li><a class="dropdown-item" href="#">Action</a></li>
     <li><a class="dropdown-item" href="#">Another action</a></li>
-    <li><a class="dropdown-item" href="#">Something else here</a></li>
+    <li><a class="dropdown-item" href="#">Another more action</a></li>
   </ul>
 </div>
         <li class="nav-item">
