--- a/page4.html
+++ b/page4.html
@@ -36,9 +36,9 @@
   </div>
 </nav>
  <div class="btn-group" role="group" aria-label="Basic example">
-  <button type="button" class="btn btn-primary">Left</button>
-  <button type="button" class="btn btn-primary">Middle</button>
-  <button type="button" class="btn btn-primary">Right</button>
+  <button type="button" class="btn btn-primary">Action Shows</button>
+  <button type="button" class="btn btn-primary">Adeventure</button>
+  <button type="button" class="btn btn-primary">Crime Shows</button>
 </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </html>
