--- a/page4.html
+++ b/page4.html
@@ -36,7 +36,7 @@
   </div>
 </nav>
  <div class="btn-group" role="group" aria-label="Basic example">
-  <button type="button" class="btn btn-primary">Action Shows</button>
+  <button type="button" class="btn btn-primary" href= "https://www.imdb.com/search/title/?genres=action&title_type=tv_series,mini_series">Action Shows</button>
   <button type="button" class="btn btn-primary">Adeventure</button>
   <button type="button" class="btn btn-primary">Crime Shows</button>
 </div>
