--- a/page4.html
+++ b/page4.html
@@ -18,16 +18,9 @@
         <li class="nav-item">
           <a class="nav-link" href="page3.html">Videos</a>
         </li>
-        <div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-    Shows 
-  </button>
-  <ul class="dropdown-menu">
-    <li><a class="dropdown-item" href="#">Action</a></li>
-    <li><a class="dropdown-item" href="#">Another action</a></li>
-    <li><a class="dropdown-item" href="#">Something else here</a></li>
-  </ul>
-</div>
+       <li class="nav item">
+        <a class="nav-link" href="page4.html">Shows</a>
+       </li>
        <li class="nav-item">
           <a class="nav-link" href = "page5.html">Movies</a>
         </li>
@@ -39,6 +32,16 @@
   <button type="button" class="btn btn-primary" href = "https://www.imdb.com/search/title/?genres=action&title_type=tv_series,mini_series" >Action Shows</button>
   <button type="button" class="btn btn-primary">Adeventure</button>
   <button type="button" class="btn btn-primary">Crime Shows</button>
+</div>
+ <div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+    Shows 
+  </button>
+  <ul class="dropdown-menu">
+    <li><a class="dropdown-item" href="#">Action</a></li>
+    <li><a class="dropdown-item" href="#">Another action</a></li>
+    <li><a class="dropdown-item" href="#">Something else here</a></li>
+  </ul>
 </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </html>
