--- a/page4.html
+++ b/page4.html
@@ -29,16 +29,16 @@
   </div>
 </nav>
  <div class="btn-group" role="group" aria-label="Basic example">
-  <button type="button" class="btn btn-primary" href = "https://www.imdb.com/search/title/?genres=action&title_type=tv_series,mini_series" >Action Shows</button>
+  <button type="button" class="btn btn-primary" href="https://www.hbo.com/series/genre/action">Action Shows</button>
   <button type="button" class="btn btn-primary">Adeventure</button>
   <button type="button" class="btn btn-primary">Crime Shows</button>
 </div>
  <div class="dropdown">
   <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-    Shows 
+    More Shows 
   </button>
   <ul class="dropdown-menu">
-    <li><a class="dropdown-item" href="#">Action</a></li>
+    <li><a class="dropdown-item" href="#">Drama</a></li>
     <li><a class="dropdown-item" href="#">Another action</a></li>
     <li><a class="dropdown-item" href="#">Something else here</a></li>
   </ul>
