--- a/page2.html
+++ b/page2.html
@@ -18,16 +18,9 @@
         <li class="nav-item">
           <a class="nav-link" href="page3.html">Videos</a>
         </li>
-        <div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-    Shows 
-  </button>
-  <ul class="dropdown-menu">
-    <li><a class="dropdown-item" href="#">Action</a></li>
-    <li><a class="dropdown-item" href="#">Another action</a></li>
-    <li><a class="dropdown-item" href="#">Another more action</a></li>
-  </ul>
-</div>
+       <li class="nav-item">
+          <a class="nav-link" href="page4.html">Shows</a>
+        </li>
        <li class="nav-item">
           <a class="nav-link" href = "page5.html">Movies</a>
         </li>
