--- a/page4.html
+++ b/page4.html
@@ -28,10 +28,10 @@
     </div>
   </div>
 </nav>
- <div class="btn-group" role="group" aria-label="Basic example">
-  <button type="button" class="btn btn-primary" href="https://www.hbo.com/series/genre/action">Action Shows</button>
-  <button type="button" class="btn btn-primary">Adeventure</button>
-  <button type="button" class="btn btn-primary">Crime Shows</button>
+ <div class="btn-group">
+  <a href="https://www.hbo.com/series/genre/action" class="btn btn-primary active" aria-current="page">Active link</a>
+  <a href="#" class="btn btn-primary">Link</a>
+  <a href="#" class="btn btn-primary">Link</a>
 </div>
  <div class="dropdown">
   <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
