--- a/page4.html
+++ b/page4.html
@@ -29,7 +29,7 @@
   </div>
 </nav>
  <div class="btn-group">
-  <a href="https://www.hbo.com/series/genre/action" class="btn btn-primary active" aria-current="page">Active link</a>
+  <a href="https://www.hbo.com/series/genre/action" class="btn btn-primary active" target="_blank" aria-current="page">Active link</a>
   <a href="#" class="btn btn-primary">Link</a>
   <a href="#" class="btn btn-primary">Link</a>
 </div>
