--- a/page4.html
+++ b/page4.html
@@ -33,14 +33,15 @@
   <a href="#" class="btn btn-primary">Link</a>
   <a href="#" class="btn btn-primary">Link</a>
 </div>
- <div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-    More Shows 
-  </button>
+<div class="dropdown">
+  <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+    More Shows
+  </a>
+
   <ul class="dropdown-menu">
-    <li><a class="dropdown-item" href="#">Drama</a></li>
-    <li><a class="dropdown-item" href="#">Another action</a></li>
-    <li><a class="dropdown-item" href="#">Something else here</a></li>
+    <li><a class="dropdown-item" href="#">DC Shows </a></li>
+    <li><a class="dropdown-item" href="https://www.disneyplus.com/en-gb/brand/marvel" target="_blank" >Marvel Shows</a></li>
+    <li><a class="dropdown-item" href="#">Other Stuff</a></li>
   </ul>
 </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
