--- a/page4.html
+++ b/page4.html
@@ -29,8 +29,8 @@
   </div>
 </nav>
  <div class="btn-group">
-  <a href="https://www.hbo.com/series/genre/action" class="btn btn-primary active" target="_blank" aria-current="page">Active link</a>
-  <a href="#" class="btn btn-primary">Link</a>
+  <a href="https://www.hbo.com/series/genre/action" class="btn btn-primary active" target="_blank" aria-current="page">HBO Action Series</a>
+  <a href="https://play.hbomax.com/page/urn:hbo:page:GXrMEtQ8sromBSgEAAAK1:type:series" target="_blanl" class="btn btn-primary">Boondocks</a>
   <a href="#" class="btn btn-primary">Link</a>
 </div>
 <div class="dropdown">
@@ -39,7 +39,7 @@
   </a>
 
   <ul class="dropdown-menu">
-    <li><a class="dropdown-item" href="#">DC Shows </a></li>
+    <li><a class="dropdown-item" href="https://play.hbomax.com/page/urn:hbo:page:dc" target="_blank" >DC Shows </a></li>
     <li><a class="dropdown-item" href="https://www.disneyplus.com/en-gb/brand/marvel" target="_blank" >Marvel Shows</a></li>
     <li><a class="dropdown-item" href="#">Other Stuff</a></li>
   </ul>
