--- a/page2.html
+++ b/page2.html
@@ -28,5 +28,14 @@
     </div>
   </div>
 </nav>
+ <div class="list-group">
+  <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
+    Artist:
+  </a>
+  <a href="https://open.spotify.com/artist/3TVXtAsR1Inumwj472S9r4" target="_blank" class="list-group-item list-group-item-action">Drake</a>
+  <a href="#" class="list-group-item list-group-item-action">Future</a>
+  <a href="#" class="list-group-item list-group-item-action">Lil Durk (Durkio)</a>
+  <a href="#" class="list-group-item list-group-item-action">Gunna Wunna</a>
+</div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </html>
