--- a/page2.html
+++ b/page2.html
@@ -33,9 +33,9 @@
     Artist:
   </a>
   <a href="https://open.spotify.com/artist/3TVXtAsR1Inumwj472S9r4" target="_blank" class="list-group-item list-group-item-action">Drake</a>
-  <a href="#" class="list-group-item list-group-item-action">Future</a>
-  <a href="#" class="list-group-item list-group-item-action">Lil Durk (Durkio)</a>
-  <a href="#" class="list-group-item list-group-item-action">Gunna Wunna</a>
+  <a href="https://open.spotify.com/artist/1RyvyyTE3xzB2ZywiAwp0i" target="_blank" class="list-group-item list-group-item-action">Future</a>
+  <a href="https://open.spotify.com/artist/3hcs9uc56yIGFCSy9leWe7" target="_blank" class="list-group-item list-group-item-action">Lil Durk (Durkio)</a>
+  <a href="https://open.spotify.com/artist/2hlmm7s2ICUX0LVIhVFlZQ" target="_blank" class="list-group-item list-group-item-action">Gunna Wunna</a>
 </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </html>
